--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
 
   <div class="header"> <!-- beginning of header -->
     <ul>
-      <li class="home-nav active"><h3><a href="#home">My Name</a></h3></li>
+      <li class="home-nav active"><h3><a href="#home">Home</a></h3></li>
       <li class="work-nav"><h3><a href="#work">Work</a></h3></li>
       <li class="contact-nav"><h3><a href="#contact">Contact</a></h3></li>
     </ul>
@@ -276,9 +276,9 @@
       <div class="section"> <!-- beginning of section -->
 
         <div class="inner">
-          <h1>My Online Portfolio</h1>
-          <p>I'm So and So. Here's my portfolio.</p>
-          <div class="image"><img src=""></div>
+          <h1>Greg Uyeno</h1>
+          <p>Science Journalist</p>
+          <div class="image"><img src="water.jpg"></div>
         </div>
 
       </div> <!-- end of section -->
@@ -328,15 +328,16 @@
 
     <div id="contact"> <!-- beginning of contact -->
       <div class="section">
-        <h2>Contact Me!</h2>
-        <div class="inner"><p>Email me here.</p></div>
+        <h2>Contact Me</h2>
+        <div class="inner"><p>guyeno@gmail.com</p>
+        <p>@uh_yeah_no</p></div>
       </div>
     </div> <!-- end of contact -->
 
 
     <div class="footer"> <!-- beginning of footer -->
       <div class="section">
-        <p>Some final text</p>
+        <p>This is a work in progress</p>
       </div>
     </div> <!-- end of footer -->
 
