--- a/index.html
+++ b/index.html
@@ -330,7 +330,8 @@
       <div class="section">
         <h2>Contact Me</h2>
         <div class="inner"><p>guyeno@gmail.com</p>
-        <p>@uh_yeah_no</p></div>
+        <p><a href="twitter.com/uh_yeah_no">@uh_yeah_no</a>
+        </p></div>
       </div>
     </div> <!-- end of contact -->
 
