--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.3/jquery.min.js"></script>
   <link href='https://fonts.googleapis.com/css?family=Lato:400,900|Bitter' rel='stylesheet' type='text/css'>
 
-  <title>My Online Portfolio</title>
+  <title>Greg Uyeno</title>
 
   <style type="text/css">
 
@@ -330,7 +330,7 @@
       <div class="section">
         <h2>Contact Me</h2>
         <div class="inner"><p>guyeno@gmail.com</p>
-        <p><a href="twitter.com/uh_yeah_no">@uh_yeah_no</a>
+        <p><a href="http://twitter.com/uh_yeah_no/" target="blank">@uh_yeah_no</a>
         </p></div>
       </div>
     </div> <!-- end of contact -->
