--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@
       <div class="section">
         <h2>Contact Me</h2>
         <div class="inner"><p>guyeno@gmail.com</p>
-        <p><a href="http://twitter.com/uh_yeah_no/" target="blank">@uh_yeah_no</a>
+        <p><a href="http://twitter.com/uh_yeah_no/" target="_blank">@uh_yeah_no</a>
         </p></div>
       </div>
     </div> <!-- end of contact -->
